<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.retailshelflabel.ui.home.HomeFragment"
        android:label="@string/app_name">
        <action android:id="@+id/action_home_to_scan"
            app:destination="@id/scanFragment" />
        <action android:id="@+id/action_home_to_search"
            app:destination="@id/searchFragment" />
        <action android:id="@+id/action_home_to_csv"
            app:destination="@id/csvImportFragment" />
        <action android:id="@+id/action_home_to_queue"
            app:destination="@id/printQueueFragment" />
        <action android:id="@+id/action_home_to_settings"
            app:destination="@id/settingsFragment" />
        <action android:id="@+id/action_home_to_history"
            app:destination="@id/printHistoryFragment" />
        <action android:id="@+id/action_home_to_sync"
            app:destination="@id/modisoftSyncFragment" />
        <action android:id="@+id/action_home_to_bulk_print"
            app:destination="@id/bulkPrintFragment" />
    </fragment>

    <fragment
        android:id="@+id/scanFragment"
        android:name="com.retailshelflabel.ui.scan.ScanFragment"
        android:label="@string/nav_scan">
        <action android:id="@+id/action_scan_to_detail"
            app:destination="@id/itemDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.retailshelflabel.ui.search.SearchFragment"
        android:label="@string/nav_search">
        <action android:id="@+id/action_search_to_detail"
            app:destination="@id/itemDetailFragment" />
        <action android:id="@+id/action_search_to_edit"
            app:destination="@id/itemEditFragment" />
        <action android:id="@+id/action_search_to_bulk_print"
            app:destination="@id/bulkPrintFragment" />
    </fragment>

    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.retailshelflabel.ui.detail.ItemDetailFragment"
        android:label="@string/nav_item_detail">
        <argument android:name="itemId"
            app:argType="long"
            android:defaultValue="-1" />
        <argument android:name="scannedBarcode"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action android:id="@+id/action_detail_to_label"
            app:destination="@id/labelPreviewFragment" />
        <action android:id="@+id/action_detail_to_edit"
            app:destination="@id/itemEditFragment" />
        <action android:id="@+id/action_detail_to_queue"
            app:destination="@id/printQueueFragment" />
    </fragment>

    <fragment
        android:id="@+id/itemEditFragment"
        android:name="com.retailshelflabel.ui.edit.ItemEditFragment"
        android:label="@string/nav_item_edit">
        <argument android:name="itemId"
            app:argType="long"
            android:defaultValue="-1" />
        <argument android:name="prefillBarcode"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action android:id="@+id/action_edit_to_detail"
            app:destination="@id/itemDetailFragment"
            app:popUpTo="@id/itemDetailFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/labelPreviewFragment"
        android:name="com.retailshelflabel.ui.label.LabelPreviewFragment"
        android:label="@string/nav_label_preview">
        <argument android:name="itemId"
            app:argType="long"
            android:defaultValue="-1" />
    </fragment>

    <fragment
        android:id="@+id/printQueueFragment"
        android:name="com.retailshelflabel.ui.queue.PrintQueueFragment"
        android:label="@string/nav_print_queue" />

    <fragment
        android:id="@+id/csvImportFragment"
        android:name="com.retailshelflabel.ui.csv.CsvImportFragment"
        android:label="@string/nav_csv_import" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.retailshelflabel.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />

    <fragment
        android:id="@+id/printHistoryFragment"
        android:name="com.retailshelflabel.ui.history.PrintHistoryFragment"
        android:label="@string/nav_print_history">
        <action android:id="@+id/action_history_to_bulk_print"
            app:destination="@id/bulkPrintFragment" />
    </fragment>

    <fragment
        android:id="@+id/bulkPrintFragment"
        android:name="com.retailshelflabel.ui.bulkprint.BulkPrintFragment"
        android:label="@string/nav_bulk_print">
        <argument android:name="selectedItemIds"
            app:argType="long[]" />
        <argument android:name="bulkJobId"
            app:argType="long"
            android:defaultValue="-1" />
    </fragment>

    <fragment
        android:id="@+id/modisoftSyncFragment"
        android:name="com.retailshelflabel.ui.sync.ModisoftSyncFragment"
        android:label="@string/nav_modisoft_sync">
        <action android:id="@+id/action_sync_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

</navigation>
